--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <img src="lego404.jpg">
-    <p>
+    <h1>Everything is awesome</h1>
+    <p id="title">(Accept for this page)</p>
+      <div class="container">
+        <img src="lego404.jpg" class="image" alt="lego power cut">
+        <div class="middle">
+            <div class="hoverimg"><img src="lego_no_idea.gif"></div>
+        </div>
+      </div>
+        <a href="https://github.com/geert-timmermans" class="button">Back!</a>
   </body>
 </html>
