--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
             <div class="hoverimg"><img src="lego_no_idea.gif"></div>
         </div>
       </div>
-        <a href="https://github.com/geert-timmermans" class="button">Back!</a>
+        <a href="https://github.com/geert-timmermans" class="button">Go to my Github</a>
   </body>
 </html>
