--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Everything is awesome</h1>
-    <p id="title">(Accept for this page)</p>
+    <p id="title">(Except for this page)</p>
       <div class="container">
         <img src="lego404.jpg" class="image" alt="lego power cut">
         <div class="middle">
